force-app/main/default/objects/FileLink__c/FileLink__c.object-meta.xml
<CustomObject>
    <description>This object was created to store a link from GEDOC that contains the file that was attached by the b2c customer. It is displayed on the Cases screen in the &quot;Minhas Solicitações&quot; flow: Ajuda com cobrança, Ajuda com fatura ou cobrança, Ajuda com o Pedido, Mudança do Endereço de Instalação, Problema com Portabilidade, Problemas com Recarga.</description>
    <label>Link do Arquivo</label>
    <nameField>
        <displayFormat>LA# {00000000}</displayFormat>
        <label>Número do Link do Arquivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Links dos Arquivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>