force-app/main/default/objects/FileLink__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Links dos Arquivos</relationshipLabel>
    <relationshipName>Links_dos_Arquivos</relationshipName>
    <type>Lookup</type>
</CustomField>