force-app/main/default/objects/FileLink__c/fields/FileDescription__c.field-meta.xml
<CustomField>
    <fullName>FileDescription__c</fullName>
    <label>Descrição do Arquivo Para ser Exibido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>