force-app/main/default/objects/FileLink__c/fields/IDGedoc__c.field-meta.xml
<CustomField>
    <fullName>IDGedoc__c</fullName>
    <label>Id do Arquivo no Gedoc</label>
    <type>Url</type>
</CustomField>